--- a/pages/about.html
+++ b/pages/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/default.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     
     <title>Portfolio Gallery</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a class="active-page" href="#">Index</a></li>
+            <li><a href="#">Index</a></li>
             <li><a href="#">Project List</a></li>
-            <li><a href="#">About</a></li>
+            <li><a class="active-page" href="#">About</a></li>
         </ul>
     </nav>
 
