--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </nav>
 
     <section class="top-four">
+        <h2>Top Four</h2>
         <div class="preview-block"></div>
         <div class="preview-block"></div>
         <div class="preview-block"></div>
@@ -27,6 +28,7 @@
     </section>
 
     <section class="recent-four">
+        <h2>Recent Four</h2>
         <div class="preview-block"></div>
         <div class="preview-block"></div>
         <div class="preview-block"></div>
