Change stylings for background, and grid elements.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
         <ul>
-            <li><a class="active-page" href="#">Index</a></li>
-            <li><a href="#">Project List</a></li>
-            <li><a href="#">About</a></li>
+            <li><a class="active-page" href="/index.html">Index</a></li>
+            <li><a href="/pages/project-list.html">Project List</a></li>
+            <li><a href="/pages/about.html">About</a></li>
         </ul>
     </nav>
 
@@ -37,13 +37,13 @@
 
     <footer>
         <a class="contact-me" href="#">
-            <img src="#" alt="linkedin">
+            <img src="/src/linkedin.svg" alt="linkedin">
         </a>
         <a class="contact-me" href="#">
-            <img src="#" alt="medium">
+            <img src="/src/medium.svg" alt="medium">
         </a>
         <a class="contact-me" href="#">
-            <img src="#" alt="email">
+            <img src="/src/envelope-solid.svg" alt="email">
         </a>
     </footer>
 </body>
