--- a/pages/project-list.html
+++ b/pages/project-list.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/responsive.css">
     
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8160951654534955"
+     crossorigin="anonymous"></script>
+    
     <title>Portfolio Gallery</title>
 </head>
 <body>
